k8s-yamls/micro-server/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app
  ports:
    - port: 9010
      targetPort: 9010
